<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:text="@string/welcome_msg"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_explore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="22dp"
        android:text="@string/now_you_can_msg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_welcome"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

    <TextView
        android:id="@+id/tv_recommend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/recommended_experiences_msg"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_explore"
        app:layout_constraintTop_toBottomOf="@+id/tv_explore" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_recommened"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_explore"
        app:layout_constraintStart_toStartOf="@+id/tv_recommend"
        app:layout_constraintTop_toBottomOf="@+id/tv_recommend"
        tools:itemCount="1"
        tools:listitem="@layout/item_recommend" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_recent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rv_recommened"
        app:layout_constraintStart_toStartOf="@+id/rv_recommened"
        app:layout_constraintTop_toBottomOf="@+id/tv_recent"
        tools:itemCount="2"
        tools:listitem="@layout/item_recent" />

    <TextView
        android:id="@+id/tv_recent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/most_recent_msg"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/rv_recommened"
        app:layout_constraintTop_toBottomOf="@+id/rv_recommened" />
</androidx.constraintlayout.widget.ConstraintLayout>